add names of language-specific operator variants to heading of language-specific accordion divs

--- a/documentation/Operators/buffer.html
+++ b/documentation/Operators/buffer.html
@@ -31,11 +31,12 @@
         but collects items into Observables rather than into data structures before reemitting
         them</li>
    </ul>
+
    <h2>Language-Specific Information:</h2>
    <div id="accordion">
 
 <!-- RxCpp ==================================================================================== -->
-    <h3>RxCpp</h3><div id="RxCpp" class="operator-language-description">
+    <h3>RxCpp: <code>buffer</code></h3><div id="RxCpp" class="operator-language-description">
      <p>
       RxCpp implements two variants of <span class="operator">buffer</span>:
      </p>
@@ -63,14 +64,14 @@
     </div>
 
 <!-- RxGroovy ================================================================================= -->
-    <h3>RxGroovy</h3><div id="RxGroovy" class="operator-language-description">
+    <h3>RxGroovy: <code>buffer</code></h3><div id="RxGroovy" class="operator-language-description">
      <p>
       The RxGroovy implementation of <span class="operator">buffer</span> mirrors that of RxJava.
      </p>
     </div>
 
 <!-- RxJava =================================================================================== -->
-    <h3>RxJava</h3><div id="RxJava" class="operator-language-description">
+    <h3>RxJava: <code>buffer</code></h3><div id="RxJava" class="operator-language-description">
      <p>
       In RxJava there are several variants of <span class="operator">buffer</span>:
      </p>
@@ -168,7 +169,7 @@
     </div>
 
 <!-- RxJS ===================================================================================== -->
-    <h3>RxJS</h3><div id="RxJS" class="operator-language-description">
+    <h3>RxJS: <code>buffer</code>, <code>bufferWithCount</code>, <code>bufferWithTime</code>, and <code>bufferWithTimeOrCount</code></h3><div id="RxJS" class="operator-language-description">
      <p>
       RxJS has four <span class="operator">Buffer</span> operators &mdash; <code>buffer</code>,
       <code>bufferWithCount</code>, <code>bufferWithTime</code>, and
@@ -312,14 +313,14 @@
     </div>
 
 <!-- RxKotlin ================================================================================= -->
-    <h3>RxKotlin</h3><div id="RxKotlin" class="operator-language-description">
+    <h3>RxKotlin: <code>buffer</code></h3><div id="RxKotlin" class="operator-language-description">
      <p>
       The RxKotlin implementation of <span class="operator">buffer</span> mirrors that of RxJava.
      </p>
     </div>
 
 <!-- Rx.NET =================================================================================== -->
-    <h3>Rx.NET</h3><div id="RxNET" class="operator-language-description">
+    <h3>Rx.NET: <code>Buffer</code></h3><div id="RxNET" class="operator-language-description">
      <p>
       In Rx.NET there are several variants of <span class="operator">Buffer</span>. For each variety
       you can either pass in the source Observable as the first parameter, or you can call it as
@@ -408,7 +409,7 @@
     </div>
 
 <!-- RxPY ===================================================================================== -->
-    <h3>RxPY</h3><div id="RxPY">
+    <h3>RxPY: <code>buffer</code>, <code>buffer_with_count</code>, <code>buffer_with_time</code>, and <code>buffer_with_time_or_count</code></h3><div id="RxPY">
      <p>
       RxPY has several <span class="operator">Buffer</span> variants: <code>buffer</code>,
       <code>buffer_with_count</code>, <code>buffer_with_time</code>, and
@@ -511,7 +512,7 @@
     </div>
 
 <!-- Rx.rb ==================================================================================== -->
-    <h3>Rx.rb</h3><div id="Rxrb" class="operator-language-description">
+    <h3>Rx.rb: <code>buffer_with_count</code> and <code>buffer_with_time</code></h3><div id="Rxrb" class="operator-language-description">
      <p>
       Rx.rb has three variants of the <span class="operator">Buffer</span> operator:
      </p>
@@ -547,7 +548,7 @@
     </div>
 
 <!-- RxScala ================================================================================== -->
-    <h3>RxScala</h3><div id="RxScala" class="operator-language-description">
+    <h3>RxScala: <code>slidingBuffer</code> and <code>tumblingBuffer</code></h3><div id="RxScala" class="operator-language-description">
      <p>
       RxScala has two varieties of <span class="operator">Buffer</span> &mdash;
       <code>slidingBuffer</code> and <code>tumblingBuffer</code> &mdash; each of which has variants
