--- a/documentation/Operators/catch.html
+++ b/documentation/Operators/catch.html
@@ -40,7 +40,7 @@
    <div id="accordion">
 
 <!-- RxClojure ================================================================================ -->
-    <h3>RxClojure</h3><div id="RxClojure" class="operator-language-description">
+    <h3>RxClojure: <code>catch*</code></h3><div id="RxClojure" class="operator-language-description">
      <p>
       RxClojure implements this operator as <code>catch*</code>. This operator takes two arguments,
       both of which are functions of your choosing that take the exception raised by
@@ -77,14 +77,14 @@
     </div>
 
 <!-- RxCpp ==================================================================================== -->
-    <h3>RxCpp</h3><div id="RxCpp" class="operator-language-description">
+    <h3>RxCpp: none</h3><div id="RxCpp" class="operator-language-description">
      <p>
       RxCpp does not implement the <span class="operator">Catch</span> operator.
      </p>
     </div>
 
 <!-- RxGroovy ================================================================================= -->
-    <h3>RxGroovy</h3><div id="RxGroovy" class="operator-language-description">
+    <h3>RxGroovy: <code>onErrorResumeNext</code>, <code>onErrorReturn</code>, and <code>onExceptionResumeNext</code></h3><div id="RxGroovy" class="operator-language-description">
      <p>
       RxGroovy implements the <span class="operator">Catch</span> operator in the same way as
       does RxJava. There are three distinct operators that provide this functionality:
@@ -182,7 +182,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxJava =================================================================================== -->
-    <h3>RxJava</h3><div id="RxJava" class="operator-language-description">
+    <h3>RxJava: <code>onErrorResumeNext</code>, <code>onErrorReturn</code>, and <code>onExceptionResumeNext</code></h3><div id="RxJava" class="operator-language-description">
      <p>
       RxJava implements the <span class="operator">Catch</span> operator with three distinct
       operators:
@@ -228,7 +228,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxJS ===================================================================================== -->
-    <h3>RxJS</h3><div id="RxJS" class="operator-language-description">
+    <h3>RxJS: <code>catch</code> and <code>onErrorResumeNext</code></h3><div id="RxJS" class="operator-language-description">
      <p>
       RxJS implements the <span class="operator">Catch</span> operator with two distinct
       operators:
@@ -275,7 +275,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxKotlin ================================================================================= -->
-    <h3>RxKotlin</h3><div id="RxKotlin" class="operator-language-description">
+    <h3>RxKotlin: <code>onErrorResumeNext</code>, <code>onErrorReturn</code>, and <code>onExceptionResumeNext</code></h3><div id="RxKotlin" class="operator-language-description">
      <p>
       RxKotlin implements the <span class="operator">Catch</span> operator in the same way as
       does RxJava. There are three distinct operators that provide this functionality:
@@ -321,7 +321,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- Rx.NET =================================================================================== -->
-    <h3>Rx.NET</h3><div id="RxNET" class="operator-language-description">
+    <h3>Rx.NET: <code>Catch</code> and <code>OnErrorResumeNext</code></h3><div id="RxNET" class="operator-language-description">
      <p>
       Rx.NET implements the <span class="operator">Catch</span> operator with two distinct
       operators:
@@ -353,7 +353,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxPY ===================================================================================== -->
-    <h3>RxPY</h3><div id="RxPY" class="operator-language-description">
+    <h3>RxPY: <code>catch_exception</code> and <code>on_error_resume_next</code></h3><div id="RxPY" class="operator-language-description">
      <p>
       RxPY implements the <span class="operator">Catch</span> operator with two distinct
       operators:
@@ -393,7 +393,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- Rx.rb ==================================================================================== -->
-    <h3>Rx.rb</h3><div id="Rxrb" class="operator-language-description">
+    <h3>Rx.rb: <code>on_error_resume_next</code> and <code>rescue_error</code></h3><div id="Rxrb" class="operator-language-description">
      <p>
       Rx.rb implements the <span class="operator">Catch</span> operator with two distinct
       operators:
@@ -422,7 +422,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxScala ================================================================================== -->
-    <h3>RxScala</h3><div id="RxScala" class="operator-language-description">
+    <h3>RxScala: <code>OnErrorFlatMap</code>, <code>onErrorResumeNext</code>, <code>onErrorReturn</code>, and <code>onExceptionResumeNext</code></h3><div id="RxScala" class="operator-language-description">
      <p>
       Rx.rb implements the <span class="operator">Catch</span> operator with four distinct
       operators:
