--- a/documentation/Operators/concat.html
+++ b/documentation/Operators/concat.html
@@ -46,7 +46,7 @@
    <div id="accordion">
 
 <!-- RxClojure ================================================================================ -->
-    <h3>RxClojure</h3><div id="RxClojure" class="operator-language-description">
+    <h3>RxClojure: <code>concat</code> and <code>concat*</code></h3><div id="RxClojure" class="operator-language-description">
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
      </figure>
@@ -64,7 +64,7 @@
     </div>
 
 <!-- RxCpp ==================================================================================== -->
-    <h3>RxCpp</h3><div id="RxCpp" class="operator-language-description">
+    <h3>RxCpp: <code>concat</code></h3><div id="RxCpp" class="operator-language-description">
      <p>
       RxCpp implements this operator as <code>concat</code>:
      </p>
@@ -74,7 +74,7 @@
     </div>
 
 <!-- RxGroovy ================================================================================= -->
-    <h3>RxGroovy</h3><div id="RxGroovy" class="operator-language-description">
+    <h3>RxGroovy: <code>concat</code> and <code>concatWith</code></h3><div id="RxGroovy" class="operator-language-description">
      <p>
       RxGroovy implements this operator as <code>concat</code>. There are variants of this operator
       that take between two and nine Observables as parameters, and that concatenate them in the
@@ -110,7 +110,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxJava =================================================================================== -->
-    <h3>RxJava</h3><div id="RxJava" class="operator-language-description">
+    <h3>RxJava: <code>concat</code> and <code>concatWith</code></h3><div id="RxJava" class="operator-language-description">
      <p>
       RxJava implements this operator as <code>concat</code>. There are variants of this operator
       that take between two and nine Observables as parameters, and that concatenate them in the
@@ -128,7 +128,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxJS ===================================================================================== -->
-    <h3>RxJS</h3><div id="RxJS" class="operator-language-description">
+    <h3>RxJS: <code>concat</code> and <code>concatAll</code></h3><div id="RxJS" class="operator-language-description">
      <p>
       RxJS implements this operator as <code>concat</code> and <code>concatAll</code>.
      </p>
@@ -162,7 +162,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxKotlin ================================================================================= -->
-    <h3>RxKotlin</h3><div id="RxKotlin" class="operator-language-description">
+    <h3>RxKotlin: <code>concat</code> and <code>concatWith</code></h3><div id="RxKotlin" class="operator-language-description">
      <p>
       RxKotlin implements this operator as <code>concat</code>. There are variants of this operator
       that take between two and nine Observables as parameters, and that concatenate them in the
@@ -180,7 +180,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- Rx.NET =================================================================================== -->
-    <h3>Rx.NET</h3><div id="RxNET" class="operator-language-description">
+    <h3>Rx.NET: <code>Concat</code></h3><div id="RxNET" class="operator-language-description">
      <p>
       Rx.NET implements this operator as <code>Concat</code>. It accepts either an enumerable of
       Observables, an Observable of Observables, or two Observables as parameters, and concatenates
@@ -192,7 +192,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxPY ===================================================================================== -->
-    <h3>RxPY</h3><div id="RxPY" class="operator-language-description">
+    <h3>RxPY: <code>concat</code> and <code>concatAll</code></h3><div id="RxPY" class="operator-language-description">
      <figure>
       <img src="IMAGES/concat.png" width="640" alt="concat" />
      </figure>
@@ -211,7 +211,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- Rx.rb ==================================================================================== -->
-    <h3>Rx.rb</h3><div id="Rxrb" class="operator-language-description">
+    <h3>Rx.rb: <code>concat</code> and <code>merge_all</code></h3><div id="Rxrb" class="operator-language-description">
      <p>
       In Rx.rb, the <code>concat</code> operator operates on two Observables as an instance
       operator, or on an array of Observables as a class method.
@@ -230,7 +230,7 @@ Sequence complete</pre></div>
     </div>
 
 <!-- RxScala ================================================================================== -->
-    <h3>RxScala</h3><div id="RxScala" class="operator-language-description">
+    <h3>RxScala: <code>concat</code> and <code>++</code></h3><div id="RxScala" class="operator-language-description">
      <p>
       RxScala implements this operator in two ways. There is a <code>concat</code> operator that
       accepts an Observable of Observables as its parameter, and then concatenates each of these
