--- a/documentation/Operators/retry.html
+++ b/documentation/Operators/retry.html
@@ -31,14 +31,14 @@
    <div id="accordion">
 
 <!-- RxClojure ================================================================================ -->
-    <h3>RxClojure</h3><div id="RxClojure" class="operator-language-description">
+    <h3>RxClojure: none</h3><div id="RxClojure" class="operator-language-description">
      <p>
       RxClojure does not implement the <span class="operator">Retry</span> operator.
      </p>
     </div>
 
 <!-- RxCpp ==================================================================================== -->
-    <h3>RxCpp</h3><div id="RxCpp" class="operator-language-description">
+    <h3>RxCpp: <code>retry</code></h3><div id="RxCpp" class="operator-language-description">
      <p>
       RxCpp implements this operator as <code>retry</code>:
      </p>
@@ -54,7 +54,7 @@
     </div>
 
 <!-- RxGroovy ================================================================================= -->
-    <h3>RxGroovy</h3><div id="RxGroovy" class="operator-language-description">
+    <h3>RxGroovy: <code>retry</code> and <code>retryWhen</code></h3><div id="RxGroovy" class="operator-language-description">
      <p>
       RxGroovy has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
@@ -98,7 +98,7 @@
     </div>
 
 <!-- RxJava =================================================================================== -->
-    <h3>RxJava</h3><div id="RxJava" class="operator-language-description">
+    <h3>RxJava: <code>retry</code> and <code>retryWhen</code></h3><div id="RxJava" class="operator-language-description">
      <p>
       RxJava has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
@@ -161,7 +161,7 @@ subscribing</pre></div>
     </div>
 
 <!-- RxJS ===================================================================================== -->
-    <h3>RxJS</h3><div id="RxJS" class="operator-language-description">
+    <h3>RxJS: <code>retry</code></h3><div id="RxJS" class="operator-language-description">
      <p>
       RxJS implements this operator as <code>retry</code>.
      </p>
@@ -193,7 +193,7 @@ subscribing</pre></div>
     </div>
 
 <!-- RxKotlin ================================================================================= -->
-    <h3>RxKotlin</h3><div id="RxKotlin" class="operator-language-description">
+    <h3>RxKotlin: <code>retry</code> and <code>retryWhen</code></h3><div id="RxKotlin" class="operator-language-description">
      <p>
       RxKotlin has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
@@ -232,7 +232,7 @@ subscribing</pre></div>
     </div>
 
 <!-- Rx.NET =================================================================================== -->
-    <h3>Rx.NET</h3><div id="RxNET" class="operator-language-description">
+    <h3>Rx.NET: <code>Retry</code></h3><div id="RxNET" class="operator-language-description">
      <p>
       Rx.NET implements this operator as <code>Retry</code>.
      </p>
@@ -254,7 +254,7 @@ subscribing</pre></div>
     </div>
 
 <!-- RxPY ===================================================================================== -->
-    <h3>RxPY</h3><div id="RxPY" class="operator-language-description">
+    <h3>RxPY: <code>retry</code></h3><div id="RxPY" class="operator-language-description">
      <p>
       RxPY implements this operator as <code>retry</code>:
      </p>
@@ -272,7 +272,7 @@ subscribing</pre></div>
     </div>
 
 <!-- Rx.rb ==================================================================================== -->
-    <h3>Rx.rb</h3><div id="Rxrb" class="operator-language-description">
+    <h3>Rx.rb: <code>retry</code> and <code>retry_infinitely</code></h3><div id="Rxrb" class="operator-language-description">
      <p>
       Rx.rb has two versions of this operator: <code>retry</code> and <code>retry_infinitely</code>.
      </p>
@@ -292,7 +292,7 @@ subscribing</pre></div>
     </div>
 
 <!-- RxScala ================================================================================== -->
-    <h3>RxScala</h3><div id="RxScala" class="operator-language-description">
+    <h3>RxScala: <code>retry</code> and <code>retryWhen</code></h3><div id="RxScala" class="operator-language-description">
      <p>
       RxScala has two versions of this operator: <code>retry</code> and <code>retryWhen</code>.
      </p>
